[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Characters/Cloud.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 431.282, 168.553 )

[sub_resource type="Animation" id=2]
resource_name = "shockwave_anim"
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.1, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10.7864, 4.22441 ), Vector2( 10.1064, 3.70441 ), Vector2( 11.5064, 4.50639 ), Vector2( 10.786, 4.224 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shockwave_attack"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ShockwaveArea/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 2.1, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 429.936, 47.6007 )

[sub_resource type="CircleShape2D" id=4]
radius = 600.0

[sub_resource type="CircleShape2D" id=5]
radius = 800.0

[node name="Cloud" type="StaticBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 10.7864, 4.22441 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shockwave_anim = SubResource( 2 )

[node name="StateLabel" type="Label" parent="."]
margin_left = -51.1265
margin_top = -248.905
margin_right = -11.1265
margin_bottom = -234.905
rect_scale = Vector2( 2, 2 )
text = "State"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AggressionLevel" type="Label" parent="."]
margin_left = -51.1265
margin_top = -217.96
margin_right = 49.8735
margin_bottom = -203.96
rect_scale = Vector2( 2, 2 )
text = "Aggresion Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extra" type="Label" parent="."]
margin_left = -49.7803
margin_top = -281.711
margin_right = 19.2197
margin_bottom = -267.711
rect_scale = Vector2( 2, 2 )
text = "Shockwave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrumpyZone" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrumpyZone"]
position = Vector2( -2.69086, -223.005 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="ShockwaveRange" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShockwaveRange"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="ShockwaveArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ShockwaveArea"]
shape = SubResource( 5 )
disabled = true
[connection signal="body_entered" from="GrumpyZone" to="." method="_on_GrumpyZone_body_entered"]
[connection signal="body_exited" from="GrumpyZone" to="." method="_on_GrumpyZone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ShockwaveRange" to="." method="_on_ShockwaveRange_body_entered"]
[connection signal="body_exited" from="ShockwaveRange" to="." method="_on_ShockwaveRange_body_exited"]
[connection signal="body_entered" from="ShockwaveArea" to="." method="_on_ShockwaveArea_body_entered"]
